# agentic-iam-guardrails

./: .gitignore  README.md
.claude/skills/ibm-carbon-design/: README.md  SKILL.md
ai-agent/: Dockerfile  README.md  SPEC.md  agent_api.py  agent_runtime.py  config.py  errors.py  identity.py  logging_utils.py  mcp_client.py  models.py  pyproject.toml  requirements.txt  scoped_tool.py  security.py  test_agent_api.py  test_config.py  test_logging_utils.py  test_scoped_tool.py  tools.py
ai-agent/.local/: actor-token
architecture-site/: README.md  index.html
deploy-k8s/: README.md  ai-agent.yaml  dashboard-agent-protection-backup.json  dashboard-agent-protection.json  dashboard.json  deployment-orgchart-jwt.yaml  frontend.yaml  opa-gov-api.yaml  opa-server.yaml  postgresql.yaml  proxy-defaults.yaml  service-defaults-agent-lua.yaml  service-defaults-agent-opa-gov.yaml  service-defaults-agent-opa.yaml  service-defaults-agent-wx-gov.yaml  service-intentions-opa-gov.yaml  service-intentions.yaml  steps.md  token-exchange.yaml  user-mcp.yaml  web-app.yaml  wx-gov-api.yaml
documentation/: agent-control-plane.html  agent-runtime-security-pattern.md.docx  agent-workload-identity-pattern.md.docx
documentation/agent_control_plane/: agentic-security-architecture-products-light.excalidraw  agentic-security-architecture.excalidraw
documentation/trackers/: agentic-iam-guardrails-story-tracker.html
infra/: AGENTS.md  README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/ami/base_image/: AWS_linux_image.pkr.hcl  README.md  variables.pkr.hcl  variables.pkrvars.hcl
infra/config/: consul-client-helm-template.yaml  consul_client.hcl.tpl  nomad_client.hcl.tpl  nomad_server.hcl.tpl  setup_common.sh  setup_nomad.sh  setup_vault.sh  user_data.tpl  vault-agent-injector-helm-template.yaml  vault_config.hcl
infra/config/observability/: loki-values.yaml  promtail-values.yaml  (+1 more)
opa-gov-api/: Dockerfile  README.md  opa_client.py  opa_gov_api.py  pyproject.toml  requirements.txt  structured_logging.py  telemetry.py
opa-gov-api/specs/: lua-filter-after.md  metrics.md  plan.md  spec.md
opa-policy-studio/.github/: README.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
token-exchange/: README.md  SPEC.md  copilot-instructions.md
token-exchange/.github/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
token-exchange/.github/app_logging/: logger.py
token-exchange/.github/broker/: broker.py
token-exchange/.github/config/: settings.py
token-exchange/.github/models/: schemas.py
token-exchange/.github/tests/: test_broker.py  test_obo_broker.py  test_obo_routes.py
token-exchange/.github/verify/: verify_client.py
token-exchange/api/: main.py  routes.py
token-exchange/app_logging/: logger.py
token-exchange/broker/: cache.py  vault_client.py
token-exchange/config/: settings.py
token-exchange/exceptions/: errors.py
token-exchange/models/: schemas.py
token-exchange/tests/: test_cache.py  test_logging.py  test_obo_broker.py  test_obo_routes.py  test_routes.py  test_settings.py
token-exchange/verify/: authorization.py  obo_broker.py  verify_client.py
user-mcp/: .dockerignore  Dockerfile  README.md  config.py  errors.py  logging_utils.py  mcp_app.py  models.py  pyproject.toml  server.py  vault_client.py
user-mcp/auth/: __init__.py  context.py  jwt_validator.py  scope_check.py
user-mcp/storage/: __init__.py  base.py  factory.py  file_repo.py  postgres_repo.py
user-mcp/tests/: conftest.py  test_file_repo.py  test_jwt_validator.py  test_scope_check.py  test_tools_e2e.py
user-mcp/tools/: __init__.py  users.py
web-app/: .dockerignore  .eslintrc.cjs  .gitignore  .prettierrc  AGENTS.md  Dockerfile  README.md  app.py  config.py  next.config.mjs  observability.py  package-lock.json  package.json  playwright.config.ts  requirements.txt  tsconfig.json  vitest.config.mts
web-app-deprecated/: Dockerfile  README.md  observability.py
web-app-deprecated/components/: chat_workspace.py  login_page.py
web-app-deprecated/pages/: chat.py
web-app-deprecated/services/: response_normalization.py
web-app/.github/: copilot-instructions.md
web-app/auth/: oauth.py  session.py
web-app/components/: chat_workspace.py  html_embed.py  navbar.py
web-app/pages/: chat.py  landing.py
web-app/services/: agent_api.py
web-app/specs/: agent-integration.md  architecture.md  auth-flow.md  observability.md
web-app/src/: middleware.ts
web-app/styles/: theme.css
wx-gov-api/: Dockerfile  README.md  ai_guardrails_api.py  pii_masking.py  pyproject.toml  realtime_detections.py  realtime_detections_api.py  requirements.txt  structured_logging.py  telemetry.py
wx-gov-api/.github/: copilot-instructions.md
(+145 files in other folders)
